# jhash-rs

./: .gitignore  .travis.yml  Cargo.toml  build.rs
src/: hasher.rs  jhash.c  lib.rs
