[package]
name = "jhash"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

build = "build.rs"

[dependencies]
rand = { version = "0.3", optional = true }

[dev-dependencies]
quickcheck = "0.4.1"

[build-dependencies]
gcc = "0.3"

[features]
default = ["std", "hasher"]
std = []
hasher = ["rand"]
